Add custom Exeptions and extract DatabaseConnectionManager.java class for centralized JDBC connections service